# fastapi-shared-orm

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_INFO.md  README.md  __init__.py  base.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
docs/: INSTALLATION.md
tests/: __init__.py  test_base.py
