[metadata]
name = shared-orm
version = 0.1.0
description = Gemeinsamer SQLAlchemy ORM-Core für Rideto-Packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/rideto
author = Rideto Team
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    sqlalchemy>=2.0.0,<3.0.0

[options.packages.find]
where = .
include = shared_orm*

[options.package_data]
shared_orm = py.typed

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    mypy>=1.0.0
    ruff>=0.1.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 100
extend-ignore = E203, W503

